--- a/blueprint/src/forms.css
+++ b/blueprint/src/forms.css
@@ -31,12 +31,14 @@ legend, #IE8#HACK { margin-top:0; margin-bottom:0; }
   field, this is purely for looks.
  */
 input[type=text], input[type=password],
+input[type=email], input[type=url], input[type=tel],
 input.text, input.title,
 textarea {
   background-color:#fff;
   border:1px solid #bbb;
 }
 input[type=text]:focus, input[type=password]:focus,
+input[type=email]:focus, input[type=url]:focus, input[type=tel]:focus,
 input.text:focus, input.title:focus,
 textarea:focus {
   border-color:#666;
@@ -44,6 +46,7 @@ textarea:focus {
 select { background-color:#fff; border-width:1px; border-style:solid; }
 
 input[type=text], input[type=password],
+input[type=email], input[type=url], input[type=tel],
 input.text, input.title,
 textarea, select {
   margin:0.5em 0;
